--- a/project1/ui5.yaml
+++ b/project1/ui5.yaml
@@ -27,3 +27,10 @@ server:
       configuration:
         flp:
           theme: sap_horizon
+framework:
+  name: SAPUI5  # or OpenUI5
+  version: "1.108.0"
+  libraries:
+    - name: sap.viz
+    - name: sap.ui.core
+    - name: sap.m
